--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <hr />
     <h2>My Work</h2>
     <a href="../public/birthday-invite.html">Birthday Invite Project</a>
-    <img src="../assets\images/birthday-invite.png" style="width=200" height="400" alt="Birthday Cake"/>
+    <img src="../assets\images/birthday-invite.png" style="width=200" height="400" alt="Birthday Cake"/><br/>
     <a href="../public/movie-ranking.html">Movie Ranking Project</a>
     <img src="../assets\images/movie-ranking.png" style= "width=200" height="400" alt="Movie Ranking List" />
     <hr />
